k8s/frontend-login-operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-operator
  namespace: login
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-operator
  template:
    metadata:
      labels:
        app: login-operator
    spec:
      tolerations:
        - key: nodetype
          operator: Equal
          value: operator
          effect: NoSchedule
      nodeSelector:
        role: operator-worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: login-operator
                topologyKey: kubernetes.io/hostname
      containers:
        - name: login-operator
          image: wooyeol43/login-frontend-operator:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
