k8s/frontend-login-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-operator
  namespace: login
spec:
  selector:
    app: login-operator
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
